grpc-envoy-proxy/config/envoy-config.yml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 } #1

static_resources:
  listeners:
    - name: main-listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 51051 }      #2
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: grpc_json
                codec_type: AUTO
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: "/var/log/access.log"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/"  }  # 3a grpc:{} means that requests are only forwarded if they are found in the grpc service definition, returning 404 for others
                          route: { cluster: grpc-backend-services, timeout: { seconds: 60 } }   #3b
                      cors:
                        allow_origin_regex:
                        - "http?:\\/\\/localhost:\\d+"
                        - "http?:\\/\\/localhost:+"
                        - "http:\\/\\/localhost+"
                        - "http:\\/\\/172.21.7.11:9090+"                      
                        allow_credentials: true
                        allow_methods: GET, PUT, DELETE, POST, PATCH, OPTIONS
                        allow_headers: content-type,origin,authorization
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web
                        expose_headers: grpc-status,grpc-message,x-envoy-upstream-service-time    
                http_filters:
                  - name: envoy.cors
                  - name: envoy.grpc_json_transcoder
                    # configuration docs: https://github.com/envoyproxy/envoy/blob/master/api/envoy/config/filter/http/transcoder/v2/transcoder.proto
                    config:
                      proto_descriptor: "/data/service_definition.pb"             #4
                      services: ["grpctest.HelloService","grpctest.PingPongService","grpctest.RequestDemoService"]                        #5
                      match_incoming_request_route : false
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false                                     #6
                  - name: envoy.router

  clusters:
    - name: grpc-backend-services                  #7
      connect_timeout: 1.25s
      type: logical_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      hosts:
        - socket_address:
            address: 127.0.0.1                       #8
            port_value: 9090
